test/parsetest/valid/empty_block.java
class A {

}

class B {
    public static void blub(String[] a){}
}

class C {
    public int blub;
}