test/parsetest/invalid/static_methods2.java
class A {

    public static int bla(int[] bl){
    
    }
}